# Startup-project

./: LICENSE  README.md
FINAL/C_Image_Change/src/: image_filter.c
FINAL/Haskell Neural network from scratch/: ML_training.hs
FINAL/Haskell_Machine_Learning/: ML-full-code.cabal
FINAL/Haskell_Machine_Learning/src/: LICENSE.txt  MLBasic.hs  MLCloud.hs  MLCode.hs  MLMain.hs
