cabal-version:       1.24
name:                cnn-haskell-project
version:             0.1.0.0
synopsis:            Proprietary CNN system with cloud support and C++ integration
description:         A Haskell-based machine learning system using a custom convolutional neural network and image processing, with proprietary licensing.
license:             Proprietary
license-file:        LICENSE.txt
author:              Your Name or Company
maintainer:          your.email@example.com
category:            Machine Learning
build-type:          Simple
extra-source-files:  README.md

executable cnn-haskell-exe
  main-is:             MLMain.hs
  other-modules:
    MLBasic
    MLCode
    MLCloudHTTP
  hs-source-dirs:      src
  build-depends:
    base >=4.14 && <5,
    text >=1.2,
    bytestring >=0.10,
    aeson >=1.5,
    req >=3.13,
    directory >=1.3,
    http-client >=0.7,
    http-client-tls >=0.3,
    containers >=0.6,
    exceptions >=0.10
  default-language:    Haskell2010
